fix the grid gap

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ button:hover{
 .body-box {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 30px;
+  grid-gap: 50px;
   /* grid-auto-rows: minmax(100px, auto); */
 }
 
@@ -112,7 +112,7 @@ button:hover{
 .bottomBox {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 30px;
+  grid-gap: 50px;
 
 }
 .bottomBox h2 {
